examples/90-full-landing-zone/multi-account/infrastructure/ingress/securitygroup.tf
resource "aws_security_group" "alb" {
  name        = "${var.lb_prefix}-alb-sg"
  description = "Public ALB SG"
  vpc_id      = local.ingress_vpc_id

  ingress {
    description      = "HTTP from internet"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  # If you want HTTPS, add 443 as well (recommended)
  ingress {
    description      = "HTTPS from internet"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    description      = "All egress"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge(var.tags, { Name = "${var.lb_prefix}-alb-sg" })
}
